--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: screenshots
-        path: ~/Library/Developer/CoreSimulator/Devices/**/*.png
+        path: ~/Library/Developer/CoreSimulator/Devices/**/data/tmp/*.png
